New rules
POM = Declarative only
CI = Controls behavior
Naming = Determines test type
Coverage = Surefire only

Signed-off-by: mariano.barcia <mariano.barcia@gmail.com>